# stochastic-portfolio

./: .gitignore  README.md  pyproject.toml
config/: experiments.yaml  return_anomalies.yaml  universes.yaml
notebooks/: 01_Data_Analysis.ipynb  02_Mean_Var_Baseline.ipynb  03_GBM.ipynb  04_Heston.ipynb  05_CVaR_vs_MV.ipynb  06_Strategies_Backtest.ipynb
scripts/: fetch_data.py  populate_tickers.py  run_experiment.py
src/spo/: __init__.py
src/spo/backtest/: __init__.py  engine.py  metrics.py  strategies.py
src/spo/data/: __init__.py  cleaning.py  loaders.py
src/spo/models/: __init__.py  gbm.py  heston.py  simulate.py
src/spo/optim/: __init__.py  black_litterman.py  cvar.py  mean_variance.py  robust_mean_variance.py
src/spo/risk/: __init__.py  var_and_cvar.py
tests/: test_cleaning.py  test_cvar.py  test_gbm.py  test_heston.py  test_optim.py  test_optim_bl_rmv.py  test_simulation.py
