[project]
name = "spo"
version = "1.0"
description = "Stochastic Portfolio Optimization project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alexis Leclercq" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "cvxpy>=1.5",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0", "ipykernel>=6.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]